changed in TaskController the method Stream toList() because it does not exist in Java8.